[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyCO2SYS"
description = "PyCO2SYS: marine carbonate system calculations in Python"
readme = "README.md"
dependencies = [
    "PyCO2SYS",
    "autograd",
    "numpy<2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["PyCO2SYS*"]

[tool.setuptools.dynamic]
version = {attr = "PyCO2SYS.meta.version"}
