[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "PyCO2SYS"
description = "PyCO2SYS: marine carbonate system calculations in Python"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "jax",
    "networkx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["PyCO2SYS*"]

[tool.setuptools.dynamic]
version = {attr = "PyCO2SYS.meta.version"}


[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "B",  # Bugbear
    "UP", # pyupgrade
    "LOG", # logging
    "ICN", # import conventions
    "G", # logging-format
    "RUF", # ruff
    "ISC001", # single-line-implicit-string-concatenation
]

ignore = [
    # line too long (82 > 79 characters)
    "E501",
    # Missing docstring in public module
    "D100",
    # Missing docstring in public class
    "D101",
    # Missing docstring in public method
    "D102",
    # Missing docstring in public function
    "D103",
    # Missing docstring in public package
    "D104",
    # Missing docstring in magic method
    "D105",
    # Missing docstring in __init__
    "D400",
    # First line should be in imperative mood (requires writing of summaries)
    "D401",
    # First word of docstring is uncapitalized
    "D403",
    # First word of the docstring should not be `This`
    "D404",
    # 1 blank line required between summary line and description (requires writing of summaries)
    "D205",
    # Docstring contains ambiguous...
    "RUF002",

    # TODO: These should be fixed
    "B006", # Do not use mutable data structures for argument defaults
    "B007", # Loop control variable `funcs` not used within loop body
    "B011", # Do not `assert False`
    "B028", # No explicit `stacklevel` keyword argument found
    "B904", # Within an `except` clause, raise exceptions
    "RUF001", # String contains ambiguous ...
    "E402", # Module level import not at top of file
    "E711", # Comparison to `None` should be `cond is None`
    "E721", # Use `is` and `is not` for type comparisons, or `isinstance()` for isinstance checks
    "F401", # ... imported but unused; consider removing, adding to `__all__`, or using a redundant alias
    "ICN", # import conventions
    "B905", # zip-without-explicit-strict
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["PyCO2SYS"]
